fix z-index and other things

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -36,4 +36,5 @@ $min-contrast-ratio: 0.5;
 
 #collapseMenu {
     width: 4em;
+    z-index: 200;
 }
